--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
+    "leaflet": "^1.9.4",
     "next": "14.0.1",
     "next-auth": "^4.24.4",
     "query-string": "^8.1.0",
@@ -23,10 +24,14 @@
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
+    "react-select": "^5.7.7",
+    "world-countries": "^5.0.0",
     "zustand": "^4.4.5"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.1",
+    "@types/leaflet": "^1.9.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
