--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.5.2",
+    "@types/react-date-range": "^1.4.7",
     "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "clsx": "^2.0.0",
@@ -22,6 +23,7 @@
     "next-cloudinary": "^5.2.0",
     "query-string": "^8.1.0",
     "react": "^18",
+    "react-date-range": "^1.4.0",
     "react-dom": "^18",
     "react-hook-form": "^7.47.0",
     "react-hot-toast": "^2.4.1",
